--- a/pages/index/childPages/power/power.less
+++ b/pages/index/childPages/power/power.less
@@ -33,6 +33,12 @@ page {
     .controler {
       margin-top: 40rpx;
 
+      .select-list{
+        display: flex;
+        .select-item{
+          margin-left: 30rpx;
+        }
+      }
       .picker {
 
         font-size: 24rpx;
