--- a/pages/index/childPages/power/power.wxml
+++ b/pages/index/childPages/power/power.wxml
@@ -3,31 +3,54 @@
     <image class="xzjt" id='index' bindtap="gotoPage" src="/static/images/common/xzjt.png"></image>
     <view class="title">控电中心</view>
     <view class="controler">
+      <!-- 多选设备 -->
       <view class="more-select" bindtap="switchMulChoi">{{mulChoi.mulChoiName}}</view>
-      <picker mode='multiSelector' bindchange="bindPickerChange" value="{{index}}" range="{{array}}">
-        <view class="picker">
-          {{array[index]}}
-        </view>
-      </picker>
-
+      <!-- 设备位置列表 -->
+      <view class="select-list">
+        <picker class="select-item" mode='selector' bindchange="DevicePositionChange" id='campus' value="{{selectList.campus.index}}" range-key='spaceName' range="{{selectList.campus.array}}">
+          <view class="picker">
+            {{selectList.campus.array[selectList.campus.index].spaceName}}
+          </view>
+        </picker>
+        <picker class="select-item" mode='selector' bindchange="DevicePositionChange" id='build' value="{{selectList.build.index}}" range-key='spaceName' range="{{selectList.build.array}}">
+          <view class="picker">
+            {{selectList.build.array[selectList.build.index].spaceName}}
+          </view>
+        </picker>
+        <picker class="select-item" mode='selector' bindchange="DevicePositionChange" id='floor' value="{{selectList.floor.index}}" range-key='spaceName' range="{{selectList.floor.array}}">
+          <view class="picker">
+            {{selectList.floor.array[selectList.floor.index].spaceName}}
+          </view>
+        </picker>
+        <picker class="select-item" mode='selector' bindchange="DevicePositionChange" id='room' value="{{selectList.room.index}}" range-key='spaceName' range="{{selectList.room.array}}">
+          <view class="picker">
+            {{selectList.room.array[selectList.room.index].spaceName}}
+          </view>
+        </picker>
+        
+        
+      </view>      
     </view>
 
+    <!-- 设备种类列表 -->
     <scroll-view class="banner" scroll-x='true' enable-flex style="width: 100%">
-      <view class="item {{selectIndex===index?'item-active':''}}" wx:for='{{selectArray}}' id='{{index}}' bindtap="selectItemTap">{{item}}</view>
+      <view class="item {{categoryId===item.id?'item-active':''}}" wx:for='{{deviceCategoryList}}' id='{{item.id}}' bindtap="selectCategoryTap">{{item.deviceType}}</view>
     </scroll-view>
 
   </view>
   <view class="body-wrap">
-    <view class="body-item" wx:for='{{10}}'>
+    <view class="body-item" wx:for='{{deviceList}}'>
       <view class="radioC" hidden='{{!mulChoi.isMul}}'>
         <radio color='#0068FF' value="r1" checked="{{switch1Checked2}}" />
       </view>
       <image class="image"></image>
       <view class="wordGroup">
-        <view class="name">学生插座</view>
-        <view class="address">校区A-教学楼A-一层-101</view>
+        <view class="name">{{item.deviceName}}</view>
+        <view class="address">{{item.position}}</view>
+        <!-- <view class="name">{{学生插座}}</view>
+        <view class="address">校区A-教学楼A-一层-101</view> -->
       </view>
-      <image class="xyjt"  bindtap="gotoPage" src="/static/images/common/xyjt.png"></image>
+      <image class="xyjt" id='{{item.id}}' bindtap="gotoPage" src="/static/images/common/xyjt.png"></image>
       <view class="switchC">
         <switch color='#0068FF' checked="{{switch1Checked}}" bindchange="switch1Change" />
       </view>
@@ -36,14 +59,14 @@
 
   </view>
   <view class="bottomC" hidden='{{!mulChoi.isMul}}'>
-    
+
     <view class="buttonC blue-body">
       操作
     </view>
     <view class="buttonC blue-border">
       取消
     </view>
-    <view class="radioC2" >
+    <view class="radioC2">
       <radio color='#0068FF' value="r1" checked="{{switch1Checked2}}" /> 全选
     </view>
   </view>
