--- a/pages/myspace/myspace.less
+++ b/pages/myspace/myspace.less
@@ -8,7 +8,30 @@ page {
     width: 100%;
     height: 598rpx;
     background-color: blue;
-
+    filter:blur(3px);
+    
+  }
+  .img{
+    width: 260rpx;
+    height: 260rpx;
+    position: absolute;
+    top: 180rpx;
+    left: 246rpx;
+    background: rgba(0,0,0,0.00);
+    border: 2px solid #ffffff;
+    border-radius: 50%;
+    
+  }
+  .nickName{
+    position: absolute;
+    top:476rpx;
+    width: 100%;
+    font-size: 16px;
+    font-family: PingFang SC, PingFang SC-Medium;
+    font-weight: 500;
+    text-align: center;
+    color: #ffffff;
+    // left: ;
   }
   .body{
     position: absolute;
