--- a/pages/myspace/myspace.wxss
+++ b/pages/myspace/myspace.wxss
@@ -6,6 +6,27 @@ page {
   width: 100%;
   height: 598rpx;
   background-color: blue;
+  filter: blur(3px);
+}
+.myspace .img {
+  width: 260rpx;
+  height: 260rpx;
+  position: absolute;
+  top: 180rpx;
+  left: 246rpx;
+  background: rgba(0, 0, 0, 0);
+  border: 2px solid #ffffff;
+  border-radius: 50%;
+}
+.myspace .nickName {
+  position: absolute;
+  top: 476rpx;
+  width: 100%;
+  font-size: 16px;
+  font-family: PingFang SC, PingFang SC-Medium;
+  font-weight: 500;
+  text-align: center;
+  color: #ffffff;
 }
 .myspace .body {
   position: absolute;
