--- a/pages/index/childPages/power/lamp/lamp.wxml
+++ b/pages/index/childPages/power/lamp/lamp.wxml
@@ -1,7 +1,7 @@
 <view class="socket">
   <view class="head">
     <image class="xzjt" id='index' bindtap="gotoPage" src="/static/images/common/xzjt.png"></image>
-    <view class="title">空开设置</view>
+    <view class="title">灯设置</view>
     <view class="img"></view>
   </view>
   <view class="body">
@@ -29,7 +29,49 @@
       <view class="item-value">{{deviceData['device_name']}}</view>
     </view>
 
-    
+    <view class="item">
+      <view class="item-key">亮灯方式:</view>
+      <!-- <view class="item-value">111102515111</view> -->
+
+      <checkbox-group bindchange='lampStateChange'>
+        <view class="radioGC">
+          <view class="item">
+            <view class="radioC">
+              <label>
+                <checkbox color='#0068FF' value="0" checked="{{select1}}" />
+              </label>
+            </view>
+            <view class="text">一灯</view>
+          </view>
+          <view class="item">
+            <view class="radioC">
+              <label>
+                <checkbox color='#0068FF' value="1" checked="{{select2}}" />
+              </label>
+            </view>
+            <view class="text">二灯</view>
+          </view>
+          <view class="item">
+            <view class="radioC">
+              <label>
+                <checkbox color='#0068FF' value="2" checked="{{select3}}" />
+              </label>
+            </view>
+            <view class="text">三灯</view>
+          </view>
+          <view class="item">
+            <view class="radioC">
+              <label>
+                <checkbox color='#0068FF' value="all" checked="{{switch1Checked4}}" />
+              </label>
+            </view>
+            <view class="text">全开</view>
+          </view>
+        </view>
+
+      </checkbox-group>
+
+    </view>
     <view class="item">
       <view class="item-key">通电方式:</view>
       <radio-group bindchange='modeChange'>
@@ -46,28 +88,30 @@
             </view>
             <view class="text">预约</view>
           </view>
+
+
         </view>
 
       </radio-group>
     </view>
-    <view class="item" style="display:{{editData.powerOnMode==='0'||!editData.powerOnMode?'none':'flex'}}"  >
+    <view class="item" style="display:{{editData.powerOnMode==='0'||!editData.powerOnMode?'none':'flex'}}">
       <view class="item-key1">预约通电时间:</view>
 
       <picker mode="multiSelector" value="{{dateTime}}" bindchange="changeDateTime" bindcolumnchange="changeDateTimeColumn" range="{{dateTimeArray}}">
         <view class="item-value">
-           {{dateTimeArray[0][dateTime[0]]}}-{{dateTimeArray[1][dateTime[1]]}}-{{dateTimeArray[2][dateTime[2]]}} {{dateTimeArray[3][dateTime[3]]}}:{{dateTimeArray[4][dateTime[4]]}}
-            <text style="color:#0068FF">修改</text>
+          {{dateTimeArray[0][dateTime[0]]}}-{{dateTimeArray[1][dateTime[1]]}}-{{dateTimeArray[2][dateTime[2]]}} {{dateTimeArray[3][dateTime[3]]}}:{{dateTimeArray[4][dateTime[4]]}}
+          <text style="color:#0068FF">修改</text>
         </view>
       </picker>
 
     </view>
-    <view class="item"  style="display:{{editData.powerOnMode==='0'||!editData.powerOnMode?'none':'flex'}}">
+    <view class="item" style="display:{{editData.powerOnMode==='0'||!editData.powerOnMode?'none':'flex'}}">
       <view class="item-key1">预约断电时间:</view>
 
       <picker mode="multiSelector" value="{{dateTime1}}" bindchange="changeDateTime1" bindcolumnchange="changeDateTimeColumn1" range="{{dateTimeArray1}}">
         <view class="item-value">
-           {{dateTimeArray1[0][dateTime1[0]]}}-{{dateTimeArray1[1][dateTime1[1]]}}-{{dateTimeArray1[2][dateTime1[2]]}} {{dateTimeArray1[3][dateTime1[3]]}}:{{dateTimeArray1[4][dateTime1[4]]}}
-            <text style="color:#0068FF">修改</text>
+          {{dateTimeArray1[0][dateTime1[0]]}}-{{dateTimeArray1[1][dateTime1[1]]}}-{{dateTimeArray1[2][dateTime1[2]]}} {{dateTimeArray1[3][dateTime1[3]]}}:{{dateTimeArray1[4][dateTime1[4]]}}
+          <text style="color:#0068FF">修改</text>
         </view>
       </picker>
 
