--- a/pages/index/childPages/power/kongtiao/kongtiao.less
+++ b/pages/index/childPages/power/kongtiao/kongtiao.less
@@ -128,6 +128,37 @@ page {
       }
       
     }
+    .temperatureC{
+      display: flex;
+      slider{
+        margin-top: 0;
+        width: 550rpx;
+        margin-right: 20rpx;
+      }
+      .buttonC{
+        width: 50rpx;
+        height: 63rpx;
+        background-color: #fff;
+        position: relative;
+        top: -9rpx;
+        .add{
+          width: 100%;
+          height: 30rpx;
+          opacity: 0.7;
+          background: #ffffff;
+          border: 1px solid #333333;
+          border-radius: 3px;
+          box-sizing: border-box;
+          .img{
+            width: 46rpx;
+            height: 30rpx;
+            position: relative;
+            top: -6rpx;
+          }
+          // background-color: #0068ff;
+        }
+      }
+    }
   }
   .footer{
     .confirm{
