--- a/pages/index/childPages/power/power.less
+++ b/pages/index/childPages/power/power.less
@@ -96,7 +96,8 @@ page {
   .body-wrap {
     position: absolute;
     top: 336rpx;
-    height: calc(100% - 336rpx);
+    // height: calc(100% - 336rpx);
+    // height: calc(100% - 440rpx);
     width: 100%;
     overflow: auto;
     // background-color: ;
@@ -180,12 +181,14 @@ page {
 
   .bottomC {
     position: fixed;
+    // z-index: 1001;
     bottom: 0;
     width: 100%;
     height: 100rpx;
     background-color: #fff;
 
     .buttonC {
+      
       float: right;
       width: 136rpx;
       height: 60rpx;
@@ -215,7 +218,7 @@ page {
     }
 
     .radioC2 {
-      
+      width: 50%;
       margin-top: 25rpx;
       transform: scale(0.9);
       margin-right: -12rpx;
