--- a/pages/index/childPages/power/power.less
+++ b/pages/index/childPages/power/power.less
@@ -124,7 +124,7 @@ page {
         width: 114rpx;
         height: 114rpx;
         margin-top: 24rpx;
-        background-color: yellow;
+        // background-color: yellow;
       }
 
       .wordGroup {
