--- a/pages/index/childPages/power/socket/socket.less
+++ b/pages/index/childPages/power/socket/socket.less
@@ -23,7 +23,14 @@ page {
       background-color: #f8f8f8;
       margin-bottom: 36rpx;
       margin-top:22rpx;
-
+      position: relative;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      image{
+        width: 400rpx;
+        height: 400rpx;
+      }
     }
   }
   .body{
