--- a/pages/index/childPages/power/socket/socket.wxss
+++ b/pages/index/childPages/power/socket/socket.wxss
@@ -21,6 +21,14 @@ page {
   background-color: #f8f8f8;
   margin-bottom: 36rpx;
   margin-top: 22rpx;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.socket .head .img image {
+  width: 400rpx;
+  height: 400rpx;
 }
 .socket .body {
   margin-left: 28rpx;
