--- a/pages/index/childPages/water/water.less
+++ b/pages/index/childPages/water/water.less
@@ -123,7 +123,7 @@ page {
         width: 114rpx;
         height: 114rpx;
         margin-top: 24rpx;
-        background-color: yellow;
+        
       }
 
       .wordGroup {
@@ -215,7 +215,7 @@ page {
     }
 
     .radioC2 {
-      
+      width: 50%;
       margin-top: 25rpx;
       transform: scale(0.9);
       margin-right: -12rpx;
