--- a/pages/index/childPages/water/water.wxss
+++ b/pages/index/childPages/water/water.wxss
@@ -106,7 +106,6 @@ page {
   width: 114rpx;
   height: 114rpx;
   margin-top: 24rpx;
-  background-color: yellow;
 }
 .power .body-wrap .body-item .wordGroup {
   margin-left: 24rpx;
@@ -184,6 +183,7 @@ page {
   color: #0068ff;
 }
 .power .bottomC .radioC2 {
+  width: 50%;
   margin-top: 25rpx;
   transform: scale(0.9);
   margin-right: -12rpx;
