--- a/pages/index/childPages/power/kongkai/kongkai.wxml
+++ b/pages/index/childPages/power/kongkai/kongkai.wxml
@@ -2,7 +2,9 @@
   <view class="head">
     <image class="xzjt" id='index' bindtap="gotoPage" src="/static/images/common/xzjt.png"></image>
     <view class="title">空开设置</view>
-    <view class="img"></view>
+    <view class="img">
+      <image src='/static/images/device/kongkai.png'></image>
+    </view>
   </view>
   <view class="body">
     <view class="item">
