--- a/pages/index/childPages/power/kongtiao/kongtiao.wxml
+++ b/pages/index/childPages/power/kongtiao/kongtiao.wxml
@@ -2,7 +2,9 @@
   <view class="head">
     <image class="xzjt" id='index' bindtap="gotoPage" src="/static/images/common/xzjt.png"></image>
     <view class="title">空调设置</view>
-    <view class="img"></view>
+    <view class="img">
+      <image src="/static/images/device/kongtiao.png"></image>
+    </view>
   </view>
   <view class="body">
     <view class="item">
@@ -33,7 +35,7 @@
       <view class="item-value">{{temperature}}°C</view>
     </view>
     <view class="temperatureC">
-      <slider min='19' max='30'  bindchanging='temperatureChange' value="{{temperature}}" backgroundColor="#33333333" activeColor='#0068FF' block-size='12' show-value='true'/>
+      <slider min='19' max='30'  bindchange='temperatureChange' value="{{temperature}}" backgroundColor="#33333333" activeColor='#0068FF' block-size='12' show-value='true'/>
       <view class="buttonC">
         <view class="add" bindtap="addOne">
           <image class="img" src="/static/images/common/shangla.png"></image>
