--- a/pages/index/childPages/power/power.wxml
+++ b/pages/index/childPages/power/power.wxml
@@ -2,6 +2,8 @@
   <socketPopup show='{{batchShow&&hardwareType === "1"}}' ids='{{selectIdList}}' typename='{{deviceType}}'></socketPopup>
   <kongkaiPopup show='{{batchShow&&hardwareType === "2"}}' ids='{{selectIdList}}' typename='{{deviceType}}'></kongkaiPopup>
   <yitijiPopup show='{{batchShow&&hardwareType === "8"}}' ids='{{selectIdList}}' typename='{{deviceType}}'></yitijiPopup>
+  <lampPopup show='{{batchShow&&hardwareType === "3"}}' ids='{{selectIdList}}' typename='{{deviceType}}'></lampPopup>
+  <kongtiaoPopup show='{{batchShow&&hardwareType === "7"}}' ids='{{selectIdList}}' typename='{{deviceType}}'></kongtiaoPopup>
   <view class="head-color">
     <image class="xzjt" id='index' bindtap="gotoPage" src="/static/images/common/xzjt.png"></image>
     <view class="title">控电中心</view>
@@ -49,7 +51,7 @@
         <view class="radioC" hidden='{{!mulChoi.isMul}}'>
           <checkbox color='#0068FF' value="{{item.id}}" checked="{{singleSelect}}" />
         </view>
-        <image class="image"></image>
+        <image class="image" src="{{item.src}}"></image>
         <view class="wordGroup">
           <view class="name">
             <view class="state" style="background-color: {{item.userState===0?'#FF4747':'#2EEE4E'}};">
