--- a/pages/index/childPages/power/socket/socket.wxml
+++ b/pages/index/childPages/power/socket/socket.wxml
@@ -2,7 +2,9 @@
   <view class="head">
     <image class="xzjt" id='index' bindtap="gotoPage" src="/static/images/common/xzjt.png"></image>
     <view class="title">插座设置</view>
-    <view class="img"></view>
+    <view class="img">
+      <image src="/static/images/device/socket.png"/>
+    </view>
   </view>
   <view class="body">
     <view class="item">
