--- a/pages/index/childPages/power/yitiji/yitiji.wxml
+++ b/pages/index/childPages/power/yitiji/yitiji.wxml
@@ -2,7 +2,9 @@
   <view class="head">
     <image class="xzjt" id='index' bindtap="gotoPage" src="/static/images/common/xzjt.png"></image>
     <view class="title">一体机设置</view>
-    <view class="img"></view>
+    <view class="img">
+      <image src="/static/images/device/yitiji.png"></image>
+    </view>
   </view>
   <view class="body">
     <view class="item">
