--- a/pages/index/childPages/water/water.wxml
+++ b/pages/index/childPages/water/water.wxml
@@ -1,4 +1,5 @@
 <view class="power">
+  <waterPopup show='{{batchShow}}' ids='{{selectIdList}}' typename='{{deviceType}}'></waterPopup>
   <view class="head-color">
     <image class="xzjt" id='index' bindtap="gotoPage" src="/static/images/common/xzjt.png"></image>
     <view class="title">控水中心</view>
